@@ -1,10 +1,15 @@
-$eterna: CHANGES,v 1.67 2009/04/18 11:42:39 mrg Exp $
+$eterna: CHANGES,v 1.68 2009/05/22 21:51:38 mrg Exp $
 
 changes since bozohttpd 20090417:
 	o  avoid dying in daemon mode for some uncommon, but recoverable, errors
 	o  close leaking file descriptors for CGI and daemon mode
 	o  handle poll errors properly
 	o  don't try to handle more than one request per process yet
+	o  add subdirs for build "debug" and "small" versions
+	o  clean up a bad merge / duplicate code
+	o  make mmap() usage portable, fixes linux & ranges: support
+	o  document the -f option
+	o  daemon mode now serves 6 files per child
 
 changes since bozohttpd 20080303:
 	o  make bozohttpd internally more modular, preparing the way
